<resources>

    <string name="app_name">Event Viewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_event_main">EventViewer</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="teststring">Testing</string>
    
    <!--  Settings  -->
    <string name="title_activity_settings">Settings</string>
    <string name="items_to_display">Display</string>
    <string name="items_to_display_summary">Number of items to display</string>
    <string name="cal_display">Calendars to Display</string>
    <string name="cal_display_summary">The list of calendars to display.</string>
    <string name="items_to_display_dialog_title">Items to Display</string>
    <string name="date_limit">Days to Show</string>
    <string name="date_limit_summary">How many days in the future to show events for.</string>
    <string-array name="empty_array"/>
	<string-array name="values_array">
	    <item>2</item>
	</string-array>
    <string name="settings_title">Settings</string>
    <string name="dateHeaderTemp">Date Header</string>
    <string name="temp">Temporary String</string>
    
</resources>