<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
     <EditTextPreference
                android:key="items_to_display"
                android:title="@string/items_to_display"
                android:summary="@string/items_to_display_summary"
                android:dialogTitle="@string/items_to_display_dialog_title"
                android:defaultValue="40"
                 />
         
    <EditTextPreference
        android:title="@string/date_limit"
        android:dialogTitle="@string/date_limit"
        android:summary="@string/date_limit_summary"
        android:key="maxdays"
        android:defaultValue="120" />
     
    <MultiSelectListPreference 
    	android:title="@string/cal_display" 
    	android:dialogTitle="@string/cal_display"
    	android:summary="@string/cal_display_summary" 
    	android:key="caldisplay"
    	android:entries="@array/values_array"
    	android:entryValues="@array/values_array"
    	android:defaultValue="@array/empty_array" />
    
</PreferenceScreen>